# breve-creatures-clone

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  main.py
backend/: Cargo.toml  README.md
backend/src/: main.rs
data/benchmarks/: neural-v2-benchmark-24pop-3gen.csv  neural-v2-benchmark-64pop-1gen.csv  neural-v2-benchmark-smoke.csv
data/creatures/: lucas-test.json  snakey.json  snaky-two.json  wormy.json
docs/: AUDIT-plateau-analysis.md  api.md  creature-creator-visual-editor-rollout.md  neural-core-rebuild-plan.md  rl-roadmap.md
frontend/: README.md  index.html  pyproject.toml
scripts/: benchmark-neural-v2.ps1
sim-backend/: README.md
skills/evolution-performance-api/: SKILL.md
src/: main.rs
tmp/: tmp-js.txt  tmp-styles.txt
ui/: creator-app.js  creator.html  index.html
