[package]
name = "breve-creatures"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.2", features = ["ws", "macros"] }
futures = "0.3.31"
include_dir = "0.7.4"
mime_guess = "2.0.5"
rand = { version = "0.9.0", features = ["small_rng"] }
rapier3d = "0.31.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
